--- a/teamSsum/WebContent/assets/css/main.css
+++ b/teamSsum/WebContent/assets/css/main.css
@@ -366,15 +366,20 @@
 		-ms-transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out, box-shadow 0.2s ease-in-out, background-color 0.2s ease-in-out;
 		background: transparent;
-		border-radius: 4px;
+		border-radius: 5px;
 		border: solid 1px #ffffff;
 		color: inherit;
 		display: block;
 		outline: 0;
-		padding: 0 1rem;
+		padding:4.5rem 5rem 1.5rem 5rem ;
 		text-decoration: none;
-		width: 100%;
+		width: 200%;
 	}
+	
+	.field half{
+		margin-left: 0;
+	}
+
 
 		input[type="text"]:invalid,
 		input[type="password"]:invalid,
@@ -438,7 +443,10 @@
 	input[type="password"],
 	input[type="email"],
 	select {
-		height: 2.75rem;
+		
+		height: 5rem;
+		
+		
 	}
 
 	textarea {
@@ -1486,8 +1494,8 @@
 			transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
 			padding: 4.5rem 2.5rem 1.5rem 2.5rem ;
 			position: relative;
-			width: 40rem;
-			max-width: 100%;
+			width: 70rem;
+			max-width: 70%;
 			background-color: rgba(27, 31, 34, 0.85);
 			border-radius: 4px;
 			opacity: 0;
