--- a/teamSsum/WebContent/assets/css/main.css
+++ b/teamSsum/WebContent/assets/css/main.css
@@ -371,18 +371,10 @@
 		color: inherit;
 		display: block;
 		outline: 0;
-		padding: 0 1rem;
+		padding: 5rem 1rem 5rem 1rem ;
 		text-decoration: none;
 		width: 100%;
 	}
-
-	
-	.field half{
-	
-		 margin-left: 0;
-	}
-
-
 
 		input[type="text"]:invalid,
 		input[type="password"]:invalid,
