--- a/teamSsum/WebContent/assets/css/main.css
+++ b/teamSsum/WebContent/assets/css/main.css
@@ -123,7 +123,7 @@
 		color: #ffffff;
 		font-family: aÆæ±Û¾¾L;
 		font-weight: 300;
-		font-size: 2;
+		font-size: 15pt;
 		line-height: 1.65;
 	}
 
